fixed up the alignment of the page. Trying to get the functionality done. Have been able to hide and reveal the form when hitting the new book btn.

--- a/libraryApp_Project/css/base/resets.css
+++ b/libraryApp_Project/css/base/resets.css
@@ -1,23 +1,24 @@
 :root {
-  --bkgd-clr: #293681 --txt-clor: #95ccdd;
-  --btn-clor: #4274d9;
-  --btn-clr-hover: #d0e7e6;
+    --bkgd-clr: #293681;
+    --txt-clor: #95ccdd;
+    --btn-clor: #4274d9;
+    --btn-clr-hover: #d0e7e6;
 }
 
 *,
 ::after,
 ::before {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-  margin: 0px;
-  width: 100%;
+    margin: 0px;
+    width: 100%;
 }
 
 body,
@@ -26,27 +27,34 @@ h2,
 h3,
 h4,
 p {
-  margin: 0;
+    margin: 0;
 }
 
 body {
-  line-height: 1.5;
-  min-height: 100vh;
+    line-height: 1.5;
+    min-height: 100vh;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 img,
 picture {
-  display: block;
-  max-width: 100%;
-  height: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 input,
 button,
 select {
-  font: inherit;
+    font: inherit;
+}
+
+fieldset {
+    min-width: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
