--- a/libraryApp_Project/css/util/utils.css
+++ b/libraryApp_Project/css/util/utils.css
@@ -1,14 +1,56 @@
-.flex {
-  display: flex;
-  gap: 1rem;
+.flex-row {
+    display: flex;
+    gap: 1rem;
+}
+
+.flex-col {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
 }
 
 .grid {
-  display: grid;
+    display: grid;
 }
 
 .container {
-  padding-inline: 0 2em;
-  margin-inline: auto;
-  max-width: 80rem;
+    padding-inline: 0 0;
+    margin-inline: auto;
+    max-width: 80rem;
+}
+
+.justify-center {
+    justify-content: center;
+    justify-items: ceter;
+    justify-self: center;
+}
+
+justify-evenly {
+    justify-content: space-evenly;
+}
+
+.align-center {
+    align-content: center;
+    align-items: center;
+    align-self: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.bdr-radius {
+    border-radius: .5rem;
+}
+
+.gap {
+    gap: 1rem;
+}
+
+.pst-inherit{
+    position: inherit;
+}
+
+.d-{
+    display: none;
 }
